style.css
@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #f7f7f7;
    font-family: 'Roboto', sans-serif;
}

.header {
    width: 100%;
    border-bottom: 1px solid #b5b7ba;
    background-color: #dfdfdf;
    margin: 0 auto;
    min-height: 32px;
    text-align: center;
    padding: 8px 0;
}

.header .selected {
    color: #000;
}

.center {
    margin: 0 auto;
}

.header a {
    color: #4d4d4d;
    font-size: 20px;
    font-weight: 100;
    text-align: left;
    text-decoration: none;
    height: 32px;
    line-height: 32px;
    display: inline-block;
    padding: 8px;
    border-top: 1px solid #dfdfdf;
}

.header a:hover {
    font-weight: 300;
    background-color: #f7f7f7;
    border-radius: 4px;
    border-left: 1px solid #b5b7ba;
    border-right: 1px solid #b5b7ba;
}

.header span {
    padding: 0 38px;
}

.content {
    width: 100%;
    margin: 0 auto;
    min-height: calc(100vh - 140px);
}

.content h1 {
    width: 100%;
    float: left;
    text-align: center;
    color: #2e353d;
    font-size: 40px;
    font-weight: 300;
    margin-top: 52px;
    margin-bottom: 62px;
}

.content h3 {
    color: #242424;
    font-size: 24px;
    font-weight: 300;
    text-align: left;
    margin-bottom: 31px;
}

.content h5 {
    color: #242424;
    font-size: 26px;
    text-align: left;
}

.content .box_text img {
    width: 289px;
    margin-bottom: 28px;
    margin-right: 28px;
    float: left;
}

.box_text {
    background-color: #ffffff;
    width: 80%;
    min-height: 550px;
    margin: 50px auto 50px auto;
    padding-left: 58px;
    padding-bottom: 87px;
    padding-right: 48px;
}

.box_text p {
    color: #242424;
    font-size: 24px;
    font-weight: 100;
    text-align: left;
    margin-bottom: 31px;
}

.box_text a {
    color: #40678a;
    font-size: 24px;
    font-weight: 100;
    text-align: center;
    text-decoration: none;
    padding-right: 10px;
}

.box_text a:hover {
    font-weight: 300;
    color: #4d4d4d;
}

.media {
    margin-right: 0;
}

.box,
.box_files {
    background-color: #ffffff;
    width: 80%;
    min-height: 500px;
    margin: 50px auto 50px auto;
    padding-top: 38px;
    padding-right: 48px;
    padding-bottom: 87px;
    padding-left: 58px;
}

.box p {
    color: #242424;
    font-size: 24px;
    font-weight: 100;
    text-align: left;
    margin-top: 34px;
    margin-bottom: 24px;
}

.box input {
    border: 1px solid #a0a0a0;
    background-color: #f5f5f5;
    width: 457px;
    height: 34px;
    padding-left: 10px;
    font-size: 20px;
    font-weight: 100;
    margin-bottom: 15px;
}

.box .button {
    display: block;
    width: initial;
    height: initial;
    float: left;
    background-color: #8cbbd3;
    color: #ffffff;
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    font-weight: 300;
    text-align: center;
    text-decoration: none;
    margin-right: 12px;
    margin-bottom: 30px;
    padding: 11px 51px;
}

.box .button:hover {
    background-color: #5ba1d3;
}

.box a {
    display: block;
    float: left;
    background-color: #8cbbd3;
    color: #ffffff;
    font-size: 24px;
    font-weight: 300;
    text-align: center;
    text-decoration: none;
    margin-right: 12px;
    margin-bottom: 30px;
    padding: 11px 51px;
}

.box a:hover {
    background-color: #5ba1d3;
}

.box_files p {
    color: #242424;
    font-size: 24px;
    font-weight: 100;
    text-align: left;
    margin-bottom: 31px;
}

.box_files a {
    color: #40678a;
    font-size: 24px;
    font-weight: 100;
    text-align: center;
    text-decoration: none;
    margin-right: 20px;
}

.box_files a:hover {
    font-weight: 300;
    color: #4d4d4d;
}

.footer {
    background-color: #434445;
    width: 100%;
    float: left;
    height: 100px;
    text-align: center;
    color: #a4a4a4;
    font-size: 20px;
    font-weight: 100;
    line-height: 100px;
}

.footer a {
    color: inherit;
}

